Added fonts & script

--- a/front-end/templates/index.html
+++ b/front-end/templates/index.html
@@ -13,9 +13,8 @@
         <p>No song playing</p>
     </div>
     <div id="controls" class="d-flex justify-content-center gap-2">
-        <button class="btn btn-outline-primary" onclick="playPrevious()">⏮️</button>
-        <button class="btn btn-primary" onclick="playPause()">⏯️</button>
-        <button class="btn btn-outline-primary" onclick="playNext()">⏭️</button>
+        <button class="btn btn-primary" onclick="play()"><i class="fa fa-play"></i></button>
+        <button class="btn btn-primary" onclick="pause()"><i class="fa fa-pause"></i></button>
     </div>
     <div class="mt-3">
         <label for="volumeControl" class="form-label">Volume:</label>
